manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-service
spec:
  selector:
    app: arch-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: NodePort
